fix: List 정적 메서드 리팩토링